# AndroidCameraDemo

SimpleMediaLib/: settings.gradle
SimpleMediaLib/app/: build.gradle
SimpleMediaLib/app/src/main/: AndroidManifest.xml
SimpleMediaLib/app/src/main/res/layout/: camera_activity.xml
SimpleMediaLib/app/src/main/res/values/: strings.xml  themes.xml
SimpleMediaLib/app/src/main/res/values-night/: themes.xml
SimpleMediaLib/cameralib/: build.gradle
SimpleMediaLib/cameralib/src/main/cpp/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/camera_render/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/camera_render/include/: SmlCameraPreviewController.h  camera_preview_renderer.h
SimpleMediaLib/cameralib/src/main/cpp/camera_render/src/: SmlCameraPreviewController.cpp  camera_preview_renderer.cpp
SimpleMediaLib/cameralib/src/main/cpp/common/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/common/libcommon/include/: eglcore.h  glutils.h  sml_log.hpp
SimpleMediaLib/cameralib/src/main/cpp/common/libcommon/src/: eglcore.cpp  glutils.cpp
SimpleMediaLib/cameralib/src/main/cpp/common/libjpeg-turbo/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/common/libpng/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/sky_box/: CMakeLists.txt
SimpleMediaLib/cameralib/src/main/cpp/sky_box/include/: SkyBox.h  SkyBoxController.h
SimpleMediaLib/cameralib/src/main/cpp/sky_box/src/: SkyBox.cpp  SkyBoxController.cpp
SimpleMediaLib/cameralib/src/main/java/: com_example_cameralib_SkyBoxController.h
SimpleMediaLib/ffmpeglib/: build.gradle
SimpleMediaLib/ffmpeglib/src/main/: AndroidManifest.xml
SimpleMediaLib/ffmpeglib/src/main/cpp/: CMakeLists.txt  ffmpeglib.cpp
SimpleMediaLib/gradle/wrapper/: gradle-wrapper.properties
SimpleMediaLib/mp4lib/: build.gradle
SimpleMediaLib/mp4lib/src/main/: AndroidManifest.xml
(+63 files in other folders)
